--- a/storyforge/client/Story_Forge_Frontend/src/components/Layout.css
+++ b/storyforge/client/Story_Forge_Frontend/src/components/Layout.css
@@ -15,8 +15,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1.5rem;
-  will-change: transform;
-  transform: translateZ(0);
 }
 
 
